--- a/Lung_Tumor_Detect.ipynb
+++ b/Lung_Tumor_Detect.ipynb
@@ -2,13 +2,13 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "yPX-_7RovS6T",
-        "outputId": "84de729b-f91a-4aad-9b53-5bf966c8fc3d"
+        "outputId": "0ee19195-4af2-4178-e2d4-eb1870995881"
       },
       "outputs": [
         {
@@ -43,13 +43,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "u4q2i51uLERs",
-        "outputId": "5ed434e9-fb31-41c7-8beb-6f86ea0a0eca"
+        "outputId": "83fc5779-2479-4b02-f1f6-d8dadd5d2dcc"
       },
       "outputs": [
         {
@@ -67,7 +67,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 29
+          "execution_count": 2
         }
       ],
       "source": [
@@ -91,7 +91,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "metadata": {
         "id": "ocg5e1_VF_4O"
       },
@@ -171,12 +171,12 @@
       "metadata": {
         "id": "wPSy42sNpx_h"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -276,7 +276,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -339,7 +339,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -424,7 +424,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -484,7 +484,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": null,
       "metadata": {
         "id": "KJlesVZDi3Td"
       },
@@ -502,7 +502,7 @@
       "metadata": {
         "id": "nHnnicj_JxjM"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -517,7 +517,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -551,7 +551,7 @@
       "metadata": {
         "id": "2E1_Vb0fJV3p"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -581,7 +581,7 @@
         "id": "Nhw72FVzyQgH",
         "outputId": "c7c4688e-ebc0-46bf-d812-a890dafc5ce8"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -598,16 +598,18 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install tensorflow"
+        "!pip install tensorflow\n",
+        "!pip install reportlab\n",
+        "!pip install datetime\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "WtYkz6sTBWo2",
-        "outputId": "e694f91f-1242-434a-e66c-bd439eeb456f"
+        "outputId": "bbf016a0-5757-49b8-ed52-9c244b6bbead"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -653,7 +655,20 @@
             "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/dist-packages (from requests<3,>=2.21.0->tensorboard<2.16,>=2.15->tensorflow) (2023.11.17)\n",
             "Requirement already satisfied: MarkupSafe>=2.1.1 in /usr/local/lib/python3.10/dist-packages (from werkzeug>=1.0.1->tensorboard<2.16,>=2.15->tensorflow) (2.1.3)\n",
             "Requirement already satisfied: pyasn1<0.6.0,>=0.4.6 in /usr/local/lib/python3.10/dist-packages (from pyasn1-modules>=0.2.1->google-auth<3,>=1.6.3->tensorboard<2.16,>=2.15->tensorflow) (0.5.1)\n",
-            "Requirement already satisfied: oauthlib>=3.0.0 in /usr/local/lib/python3.10/dist-packages (from requests-oauthlib>=0.7.0->google-auth-oauthlib<2,>=0.5->tensorboard<2.16,>=2.15->tensorflow) (3.2.2)\n"
+            "Requirement already satisfied: oauthlib>=3.0.0 in /usr/local/lib/python3.10/dist-packages (from requests-oauthlib>=0.7.0->google-auth-oauthlib<2,>=0.5->tensorboard<2.16,>=2.15->tensorflow) (3.2.2)\n",
+            "Requirement already satisfied: reportlab in /usr/local/lib/python3.10/dist-packages (4.0.8)\n",
+            "Requirement already satisfied: pillow>=9.0.0 in /usr/local/lib/python3.10/dist-packages (from reportlab) (9.4.0)\n",
+            "Requirement already satisfied: chardet in /usr/local/lib/python3.10/dist-packages (from reportlab) (5.2.0)\n",
+            "Collecting datetime\n",
+            "  Downloading DateTime-5.4-py3-none-any.whl (52 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m52.5/52.5 kB\u001b[0m \u001b[31m724.8 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hCollecting zope.interface (from datetime)\n",
+            "  Downloading zope.interface-6.1-cp310-cp310-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_17_x86_64.manylinux2014_x86_64.whl (247 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m247.1/247.1 kB\u001b[0m \u001b[31m3.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hRequirement already satisfied: pytz in /usr/local/lib/python3.10/dist-packages (from datetime) (2023.3.post1)\n",
+            "Requirement already satisfied: setuptools in /usr/local/lib/python3.10/dist-packages (from zope.interface->datetime) (67.7.2)\n",
+            "Installing collected packages: zope.interface, datetime\n",
+            "Successfully installed datetime-5.4 zope.interface-6.1\n"
           ]
         }
       ]
@@ -666,6 +681,10 @@
         "import numpy as np\n",
         "from PIL import Image\n",
         "from tensorflow.keras.applications.mobilenet_v2 import preprocess_input\n",
+        "from reportlab.pdfgen import canvas\n",
+        "from google.colab import files\n",
+        "from io import BytesIO\n",
+        "from datetime import datetime  # Import the datetime module\n",
         "\n",
         "# Load model\n",
         "Tumour_detect = tf.keras.models.load_model('/content/drive/MyDrive/ModelData')  # change this to the model data path\n",
@@ -689,19 +708,22 @@
         "    img_array = img_array.resize((224, 224))\n",
         "    img_array = np.array(img_array)\n",
         "    img_array = preprocess_input(img_array)\n",
-        "    img_array = np.expand_dims(img_array, axis=0)  # Expand dimensions to match model's expected input shape\n",
+        "    img_array = np.expand_dims(img_array, axis=0)  # Expand dimensions to match the model's expected input shape\n",
         "    predictions = model.predict(img_array)\n",
         "    predicted_class = np.argmax(predictions)\n",
         "    return predicted_class\n",
         "\n",
         "# Colab widget for file uploading\n",
-        "from google.colab import files\n",
-        "\n",
         "uploaded_file = files.upload()\n",
         "\n",
         "if len(uploaded_file) > 0:\n",
         "    # Get the first uploaded file\n",
         "    file_path = list(uploaded_file.keys())[0]\n",
+        "\n",
+        "    # Input additional information\n",
+        "    nom = input(\"Entrez le nom du patient: \")\n",
+        "    prenom = input(\"Entez le prénom du patient: \")\n",
+        "    date_de_naissance = input(\"Entez la date de naissance du patient: \")\n",
         "\n",
         "    predicted_class = predict(file_path, Tumour_detect)\n",
         "\n",
@@ -717,17 +739,45 @@
         "        print(\"Recommended Treatments:\")\n",
         "        print(recommended_treatments)\n",
         "    else:\n",
-        "        print(\"No specific treatments are recommended. Regular health check-ups are advised.\")\n"
+        "        print(\"No specific treatments are recommended. Regular health check-ups are advised.\")\n",
+        "\n",
+        "    # Save results in a PDF with a unique name based on timestamp\n",
+        "    timestamp = datetime.now().strftime(\"%Y%m%d%H%M%S\")\n",
+        "    pdf_filename = f\"/content/drive/MyDrive/Rapports_Scan/Prediction_Report_{timestamp}.pdf\"\n",
+        "\n",
+        "    buffer = BytesIO()\n",
+        "    pdf = canvas.Canvas(buffer)\n",
+        "\n",
+        "    # Add information to PDF\n",
+        "    pdf.drawString(100, 700, f\"Name: {nom}\")\n",
+        "    pdf.drawString(100, 680, f\"Surname: {prenom}\")\n",
+        "    pdf.drawString(100, 660, f\"Date of Birth: {date_de_naissance}\")\n",
+        "    pdf.drawString(100, 640, f\"Predicted Class: {class_labels[predicted_class]}\")\n",
+        "\n",
+        "    if predicted_class != 2:\n",
+        "        pdf.drawString(100, 620, \"Traitement recommandé:\")\n",
+        "        pdf.drawString(120, 600, recommended_treatments)\n",
+        "\n",
+        "    pdf.save()\n",
+        "\n",
+        "    # Move the buffer position back to the beginning\n",
+        "    buffer.seek(0)\n",
+        "\n",
+        "    # Save the PDF to a file\n",
+        "    with open(pdf_filename, \"wb\") as f:\n",
+        "        f.write(buffer.read())\n",
+        "\n",
+        "    print(f\"Results saved in {pdf_filename}.\")\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 349
+          "height": 419
         },
         "id": "oSugEdRw9hIY",
-        "outputId": "bc69224d-b3ac-4bc3-e77d-99b5d8f45d91"
+        "outputId": "9d21a88f-4584-4912-a694-067c6cf6be53"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "display_data",
@@ -737,9 +787,9 @@
             ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-d20ac13c-c97d-4dbc-9834-a359c4990588\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-49a7a558-12a1-4440-a3cd-59597d6951c8\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-d20ac13c-c97d-4dbc-9834-a359c4990588\">\n",
+              "     <output id=\"result-49a7a558-12a1-4440-a3cd-59597d6951c8\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -927,8 +977,11 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Saving testImage.png to testImage (2).png\n",
-            "1/1 [==============================] - 0s 163ms/step\n"
+            "Saving testImage.png to testImage (3).png\n",
+            "Entrez le nom du patient: nom\n",
+            "Entez le prénom du patient: prenom\n",
+            "Entez la date de naissance du patient: date\n",
+            "1/1 [==============================] - 0s 283ms/step\n"
           ]
         },
         {
@@ -946,7 +999,8 @@
           "name": "stdout",
           "text": [
             "Predicted: normal\n",
-            "No specific treatments are recommended. Regular health check-ups are advised.\n"
+            "No specific treatments are recommended. Regular health check-ups are advised.\n",
+            "Results saved in /content/drive/MyDrive/Rapports_Scan/Prediction_Report_20240106092750.pdf.\n"
           ]
         }
       ]
