--- a/Lung_Tumor_Detect.ipynb
+++ b/Lung_Tumor_Detect.ipynb
@@ -919,10 +919,10 @@
         "from reportlab.pdfgen import canvas\n",
         "from google.colab import files\n",
         "from io import BytesIO\n",
-        "from datetime import datetime  # Import the datetime module\n",
+        "from datetime import datetime\n",
         "\n",
         "# Load model\n",
-        "Tumour_detect = tf.keras.models.load_model('/content/drive/MyDrive/ModelData')  # change this to the model data path\n",
+        "Tumour_detect = tf.keras.models.load_model('/content/drive/MyDrive/ModelData')  \n",
         "\n",
         "class_labels = {0: 'adenocarcinoma', 1: 'large.cell.carcinoma', 2: 'normal', 3: 'squamous.cell.carcinoma'}\n",
         "\n",
@@ -943,7 +943,7 @@
         "    img_array = img_array.resize((224, 224))\n",
         "    img_array = np.array(img_array)\n",
         "    img_array = preprocess_input(img_array)\n",
-        "    img_array = np.expand_dims(img_array, axis=0)  # Expand dimensions to match the model's expected input shape\n",
+        "    img_array = np.expand_dims(img_array, axis=0)  \n",
         "    predictions = model.predict(img_array)\n",
         "    predicted_class = np.argmax(predictions)\n",
         "    return predicted_class\n",
@@ -969,7 +969,7 @@
         "\n",
         "    print(f\"Predicted: {class_labels[predicted_class]}\")\n",
         "\n",
-        "    if predicted_class != 2:  # normal class doesn't need treatment\n",
+        "    if predicted_class != 2:\n",
         "        recommended_treatments = treatments_dict.get(predicted_class, \"No specific treatments available.\")\n",
         "        print(\"Recommended Treatments:\")\n",
         "        print(recommended_treatments)\n",
@@ -983,15 +983,19 @@
         "    buffer = BytesIO()\n",
         "    pdf = canvas.Canvas(buffer)\n",
         "\n",
+        "    # Add title and date of creation to PDF\n",
+        "    pdf.drawString(100, 800, \"Rapport d'analyse de l'image radio\")\n",
+        "    pdf.drawString(100, 780, f\"Date de consultation: {datetime.now().strftime('%Y-%m-%d %H:%M:%S')}\")\n",
+        "\n",
         "    # Add information to PDF\n",
-        "    pdf.drawString(100, 700, f\"Name: {nom}\")\n",
-        "    pdf.drawString(100, 680, f\"Surname: {prenom}\")\n",
-        "    pdf.drawString(100, 660, f\"Date of Birth: {date_de_naissance}\")\n",
-        "    pdf.drawString(100, 640, f\"Predicted Class: {class_labels[predicted_class]}\")\n",
+        "    pdf.drawString(100, 760, f\"Nom: {nom}\")\n",
+        "    pdf.drawString(100, 740, f\"Prénom: {prenom}\")\n",
+        "    pdf.drawString(100, 720, f\"Date de naissance: {date_de_naissance}\")\n",
+        "    pdf.drawString(100, 700, f\"Predicted Class: {class_labels[predicted_class]}\")\n",
         "\n",
         "    if predicted_class != 2:\n",
-        "        pdf.drawString(100, 620, \"Traitement recommandé:\")\n",
-        "        pdf.drawString(120, 600, recommended_treatments)\n",
+        "        pdf.drawString(100, 680, \"Traitement recommandé:\")\n",
+        "        pdf.drawString(120, 660, recommended_treatments)\n",
         "\n",
         "    pdf.save()\n",
         "\n",
